--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <ul>
             <li><a href="/games/minesweeper.html">Minesweeper</a></li>
             <li><a href="/games/snake.html">Snake</a></li>
+            <li><a href="/games/space-invaders.html">Space Invaders</a></li>
         </ul>
     </div>
 </body>
