--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to my first website! I'm Ryan, a kid interested in software engineering. Here, I share my projects, achievements, and passion for technology.">
+    <meta name="keywords" content="Ryan, software engineering, projects, achievements, technology, AI, programming, games">
+    <meta name="author" content="Ryan Lai">
     <title>My First Website</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">        
     <script type="text/javascript" src="/static/js/general.js"></script>
 </head>
 <body>
@@ -34,9 +37,14 @@
         <h2>Certificates and Awards</h2>
         <p>Here are some of the certificates and awards I have achieved:</p>
         <ul>
-            <li>Game Dev Bootcamp with Godot & Python (GDScript) - 2025 Logiscool Cambridge, Stephen Perse Summer Enrichment Programme - <a href="./static/files/ryan-godot-python-certificate-stephen-perse2025-08-01 12.40.34.jpg" target="_blank">View Certificate</a></li>
-            <li>UK Bebras Challenge - 2023 - Distinction (114 Points) - <a href="./static/files/ryan-uk-bebras-challenge-2023-distinction.jpg" target="_blank">View Certificate</a></li>
-            <li>UK Bebras Challenge - 2022 - Distinction (109 Points) - <a href="./static/files/ryan-uk-bebras-challenge-2022-distinction.jpg" target="_blank">View Certificate</a></li>
+            <li>Game Dev Bootcamp with Godot & Python (GDScript) - 2025 Logiscool Cambridge, Stephen Perse Summer Enrichment Programme - <a href="/static/jpg/ryan-godot-python-certificate-stephen-perse2025-08-01 12.40.34.jpg" target="_blank">View Certificate</a></li>
+            <li>UK Bebras Challenge - 2023 - Distinction (114 Points) - <a href="/static/jpg/ryan-uk-bebras-challenge-2023-distinction.jpg" target="_blank">View Certificate</a></li>
+            <li>UK Bebras Challenge - 2022 - Distinction (109 Points) - <a href="/static/jpg/ryan-uk-bebras-challenge-2022-distinction.jpg" target="_blank">View Certificate</a></li>
+        </ul>
+
+        <h2>Musical Achievements</h2>
+        <ul>
+            <li>Grade 8 Piano with Merit (123 Points) - <a title="View Markform for Grade 8 Piano" href="/static/markform-piano-grade-8-ryan.pdf" target="_blank">View Markform</a></li>
         </ul>
 
         <h2>Games Created with AI</h2>
